# tieta_dynamic_collision

./: README.md
DoorTrajPub/: CMakeLists.txt  package.xml
Ipopt_CppAd_test/Ipopy_CppAd-test/: CMakeLists.txt  cppad_ipopt_demo.cpp  cppad_test_obs_no_retape.cpp  cppad_test_obs_retape.cpp  cppad_test_track.cpp  urdf2casadi_cppad.cpp  urdf2casadi_test.cpp  urdf2casadi_track.cpp
mec_sim_mpc/mec_speed_mpc/: CMakeLists.txt  package.xml
mec_sim_mpc/mec_speed_mpc/debug_csv/debug20231111_181736/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/debug20231111_182947/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/debug20231114_111259/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/debug20231114_111537/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_162048/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_171054/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_172304/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_173045/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_184555/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_185749/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_191139/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_192838/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_193721/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_194229/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_194623/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_195150/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_200001/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_200317/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_200855/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_201115/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_202556/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_203548/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_205549/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231114_205948/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231115_160523/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_114441/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_152704/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_153919/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_155048/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_155837/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_161951/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_163257/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_164204/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_170820/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_171802/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231116_174422/: debug_exe_traj.csv  debug_prediction_traj.csv  fg_evalue_segTraj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/sim_debug20231117_111608/: debug_exe_traj.csv  debug_prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/debug_csv/temp/: debug_data_mec_test1.csv  debug_data_mec_test2.csv  debug_data_mec_test3.csv  debug_data_mec_test_individual1.csv  debug_data_test1.csv  debug_data_test2.csv  debug_data_test3.csv
mec_sim_mpc/mec_speed_mpc/include/mpc_rate/: FG_evalue.h  MPC_Controller.h  MPC_Node.h
mec_sim_mpc/mec_speed_mpc/launch/: CSV_trajectory_tracking.launch
mec_sim_mpc/mec_speed_mpc/params/: mec_mpc_track_params.yaml
mec_sim_mpc/mec_speed_mpc/record_csv/plot_20231111_181736/: prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/record_csv/plot_20231111_182947/: prediction_traj.csv
mec_sim_mpc/mec_speed_mpc/rviz/: default.rviz
mec_sim_mpc/mec_speed_mpc/src/: FG_evalue.cpp  MPC_Controller.cpp  MPC_Node.cpp  mpc_rate_node.cpp
(+473 files in other folders)
